--- a/compose_example.yml
+++ b/compose_example.yml
@@ -1,4 +1,10 @@
 version: "3.7"
 services:
+  db:
+    image: "postgres:9.6"
   web:
-    image: lumc/galaxy-uwsgi
+    image: "lumc/galaxy-uwsgi:init"
+    ports:
+      - 8080:8080
+    environment:
+      GALAXY_CONFIG_DATABASE_CONNECTION:
