work on compose example

--- a/compose_example.yml
+++ b/compose_example.yml
@@ -1,10 +1,21 @@
 version: "3.7"
 services:
   db:
+    # Check postgres container information here: https://hub.docker.com/_/postgres
     image: "postgres:9.6"
+    environment:
+      POSTGRES_USER: db_user
+      POSTGRES_PASSWORD: secret!
+      POSTGRES_DB: galaxy_db
   web:
     image: "lumc/galaxy-uwsgi:init"
     ports:
       - 8080:8080
     environment:
-      GALAXY_CONFIG_DATABASE_CONNECTION:
+      # Database connection URL information can be found here: https://docs.sqlalchemy.org/en/13/core/engines.html#database-urls
+      GALAXY_CONFIG_DATABASE_CONNECTION: "postgresql+psycopg2://db"
+      # Check postgres connection variables here: https://www.postgresql.org/docs/current/libpq-envars.html
+      PGUSER: db_user
+      PGPASSWORD: secret!
+      PGDATABASE: galaxy_db
+
