--- a/docs/compose_example/docker-compose.yml
+++ b/docs/compose_example/docker-compose.yml
@@ -1,26 +1,28 @@
 version: "3.5"
 networks:
   galaxy_network:
+    driver: bridge
 services:
   db:
     # Check postgres container information here: https://hub.docker.com/_/postgres
     image: "postgres:9.6"
     environment:
       POSTGRES_USER: db_user
-      POSTGRES_PASSWORD: secret!
+      POSTGRES_PASSWORD: secret
       POSTGRES_DB: galaxy_db
     networks:
       - galaxy_network
   web:
-    image: "lumc/galaxy-uwsgi:init"
+    image: "lumc/galaxy-uwsgi:19.05"
     ports:
       - 8080:8080
     environment:
       # Database connection URL information can be found here: https://docs.sqlalchemy.org/en/13/core/engines.html#database-urls
-      GALAXY_CONFIG_DATABASE_CONNECTION: "postgresql://db"
+      GALAXY_CONFIG_DATABASE_CONNECTION: "postgresql://"
       # Check postgres connection variables here: https://www.postgresql.org/docs/current/libpq-envars.html
+      PGHOST: db
       PGUSER: db_user
-      PGPASSWORD: secret!
+      PGPASSWORD: secret
       PGDATABASE: galaxy_db
     networks:
       - galaxy_network
