--- a/docs/compose_example/docker-compose.yml
+++ b/docs/compose_example/docker-compose.yml
@@ -17,10 +17,9 @@ services:
       - galaxy_network
     volumes:
       - postgres-data:/var/lib/postgresql/data
+
   web:
     image: "lumc/galaxy-uwsgi:19.05"
-    ports:
-      - 8080:8080
     environment:
       # Database connection URL information can be found here: https://docs.sqlalchemy.org/en/13/core/engines.html#database-urls
       # WARNING: An empty connection url such as "postgresql://" will not work with sqlalchemy. At least host and db need to be there.
@@ -32,6 +31,17 @@ services:
       - galaxy-data:/galaxy-data
     networks:
       - galaxy_network
-    depends_on:
-      - db
+
+  proxy:
+    image: "nginx:1.16"
+    volumes:
+    - type: bind
+      source: ./galaxy.nginx
+      target: /etc/nginx/conf.d/default.conf
+    ports:
+      - 80:80
+      - 443:443
+    networks:
+      - galaxy_network
+
 
