--- a/docs/compose_example/docker-compose.yml
+++ b/docs/compose_example/docker-compose.yml
@@ -4,6 +4,7 @@ networks:
 volumes:
   postgres-data:
   galaxy-data:
+  galaxy-root:
 services:
   db:
     # Check postgres container information here: https://hub.docker.com/_/postgres
@@ -29,19 +30,27 @@ services:
       PGPASSWORD: secret
     volumes:
       - galaxy-data:/galaxy-data
+      - galaxy-root:/opt/galaxy
     networks:
       - galaxy_network
-
+    depends_on:
+      - db
   proxy:
     image: "nginx:1.16"
     volumes:
     - type: bind
       source: ./galaxy.nginx
       target: /etc/nginx/conf.d/default.conf
+    - type: volume
+      source: galaxy-root
+      target: /opt/galaxy
+      read_only: true
     ports:
       - 80:80
       - 443:443
     networks:
       - galaxy_network
+    depends_on:
+      - web
 
 
