--- a/docs/compose_example/docker-compose.yml
+++ b/docs/compose_example/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.5"
+version: "3.3"
 networks:
   galaxy_network:
 volumes:
@@ -38,12 +38,14 @@ services:
       - galaxy_network
     depends_on:
       - db
+
   proxy:
     image: "nginx:1.16"
     volumes:
     - type: bind
       source: ./galaxy.nginx
       target: /etc/nginx/conf.d/default.conf
+    # We mount galaxy-root read only so we can use nginx to serve static content.
     - type: volume
       source: galaxy-root
       target: /opt/galaxy
@@ -55,5 +57,4 @@ services:
       - galaxy_network
     depends_on:
       - web
-
 
