move /galaxy_data to /var/lib/galaxy

--- a/galaxy_versions/19.05/Dockerfile
+++ b/galaxy_versions/19.05/Dockerfile
@@ -34,7 +34,7 @@ ENV GALAXY_VERSION=${GALAXY_RELEASE:-19.05} \
     GALAXY_UID=${GALAXY_UID:-1450} \
     GALAXY_USER=${GALAXY_USER:-galaxy} \
     GALAXY_VIRTUAL_ENV=${GALAXY_VIRTUAL_ENV:-/galaxy_venv} \
-    EXPORT_DIR=${EXPORT_DIR:-/galaxy_data} \
+    EXPORT_DIR=${EXPORT_DIR:-/var/lib/galaxy} \
     GALAXY_INSTALL_DIR=/opt/galaxy \
     GALAXY_HOME=/home/galaxy \
     DEBIAN_FRONTEND=noninteractive
