handle static and plugins properly

--- a/docs/compose_example/docker-compose.yml
+++ b/docs/compose_example/docker-compose.yml
@@ -4,7 +4,8 @@ networks:
 volumes:
   postgres-data:
   galaxy-data:
-  galaxy-root:
+  galaxy-static:
+  galaxy-plugins:
 services:
   db:
     # Check postgres container information here: https://hub.docker.com/_/postgres
@@ -32,8 +33,9 @@ services:
       PGUSER: dbuser
       PGPASSWORD: secret
     volumes:
-      - galaxy-data:/galaxy-data
-      - galaxy-root:/opt/galaxy
+      - galaxy-data:/var/lib/galaxy
+      - galaxy-static:/opt/galaxy/static
+      - galaxy-plugins:/opt/galaxy/config/plugins
     networks:
       - galaxy_network
     depends_on:
@@ -47,8 +49,12 @@ services:
       target: /etc/nginx/conf.d/default.conf
     # We mount galaxy-root read only so we can use nginx to serve static content.
     - type: volume
-      source: galaxy-root
-      target: /opt/galaxy
+      source: galaxy-static
+      target: /opt/galaxy/static
+      read_only: true
+    - type: volume
+      source: galaxy-plugins
+      target: /opt/galaxy/config/plugins
       read_only: true
     ports:
       - 80:80
